# MLOps-at-GenAI

./: .gitignore  LICENSE  README.md  compose.yaml  mindmap.drawio  pyproject.toml  requires.txt
backend/: .dockerignore  .gitignore  Dockerfile.torchserve  README.md  config.properties  prompts.txt  requirements.txt  sd3_handler.py
backend/notebook/: S3Touch.py  gen_images.py  sample-server.py  sd3.ipynb  sd3_notebook_script.py
frontend/: Dockerfile.next  README.md
frontend/app/: layout.tsx
frontend/components/: images-grid.tsx  navbar.tsx  prompt-input.tsx
frontend/config/: site.ts
grafana/: TODO.md
middleware/: Dockerfile.fastapi  app.py  requires.txt
prometheus/: README.md  prometheus.yml
